# log-viewer-rs

./: .gitlab-ci.yml  Cargo.toml  README.md  TODO  build.rs
.github/workflows/: rust.yml
src/: app.rs  event.rs  file_monitor.rs  input_element.rs  main.rs  net.rs  parser.rs  tab.rs  ui.rs  update.rs  utils.rs
src/parser/: log_parser.rs
