[package]
name = "log-viewer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
copypasta = "0.10.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
ratatui = "0.24.0"
regex = "1.10.2"
rfd = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.108"
unicode-width = "0.1.13"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
